--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -112,8 +112,8 @@ jobs:
         echo "\"region\"": "\"${{ secrets.S3TEST_REGION }}\"" >> $cnfFile
         echo "}" >> $cnfFile
     
-    # - name: UT Code Coverage
-    #   run: go test -v -timeout=1h ./... --tags=unittest,storagetest -covermode count -coverprofile ./cloudfuse_ut.cov
+    - name: UT Code Coverage
+      run: go test -v -timeout=1h ./... --tags=unittest,storagetest -covermode count -coverprofile ./cloudfuse_ut.cov
     
     - name: Build coverage binary
       run: go test -coverpkg="./..." -covermode=count -c -o cloudfuse.test
