--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - main
   pull_request:
+    types: [opened, synchronize, reopened, edited]
     branches:
       - main
 jobs:
@@ -15,10 +16,10 @@ jobs:
     name: Check for spelling errors
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: codespell-project/actions-codespell@master
+      - uses: actions/checkout@v4
+      - uses: codespell-project/actions-codespell@v2
         with:
           check_filenames: true
           skip: ./.git,./.github/workflows/codespell.yml,.git,*.png,*.jpg,*.svg,*.sum,./vendor,go.sum,./NOTICE
-          ignore_words_list: filetest,dum,varius,KeyPair,keypair,ro,WRONLY,wronly,AKS
+          ignore_words_list: filetest,dum,varius,KeyPair,keypair,ro,WRONLY,wronly,AKS,ser
           
