--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -54,6 +54,11 @@ jobs:
           check-latest: true
       - run: go version
 
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' 
+
       - name: Set CGO
         shell: bash
         run: |
@@ -136,11 +141,11 @@ jobs:
       - name: Start LocalStack
         run: |
           pip install localstack awscli-local[ver1] # install LocalStack cli and awslocal
-          docker pull localstack/localstack:latest  # Make sure to pull the latest version of the image
+          docker pull localstack/localstack         # Make sure to pull the latest version of the image
           localstack start -d                       # Start LocalStack in the background
           
-          echo "Waiting for LocalStack startup..."  # Wait 30 seconds for the LocalStack container
-          localstack wait -t 30                     # to become ready before timing out 
+          echo "Waiting for LocalStack startup..."  # Wait 20 seconds for the LocalStack container
+          localstack wait -t 20                     # to become ready before timing out 
           echo "Startup complete"
           
       - name: Install Azurite
