Run action on this branch to test. Update checkout.

--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -9,6 +9,7 @@ on:
   push:
     branches:
       - main
+      - trivy-github-action
   pull_request:
   schedule:
     # every Monday at 7:31pm
@@ -29,7 +30,7 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Build Cloudfuse
         run: | 
