--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -46,7 +46,7 @@ jobs:
           ignore-unfixed: true
           format: 'sarif'
           output: 'trivy-results-binary.sarif'
-          severity: 'CRITICAL,HIGH,MEDIUM,LOW'
+          severity: 'CRITICAL,HIGH,MEDIUM'
 
       - name: List Issues
         run: |
