Use exit code to signal failure. Print issues only when issues are found.

--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -45,11 +45,15 @@ jobs:
           format: 'sarif'
           output: 'trivy-results-binary.sarif'
           severity: 'CRITICAL,HIGH,MEDIUM'
+          exit-code: '1'
+        continue-on-error: true
 
       #TODO: use exit-code, or similar above, but still print the report on failure (how?)
       - name: List Issues
+        if: ${{ failure() }}
         run: |
           cat trivy-results-binary.sarif
+          exit 1
 
       #TODO: uncomment when codeql is available
       # - name: Upload Trivy scan results to GitHub Security tab
