Remove extra step

--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -31,10 +31,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
-      - name: Check directory
-        run : |
-          ls -l
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
@@ -46,7 +42,7 @@ jobs:
           severity: 'CRITICAL,HIGH,MEDIUM'
           exit-code: '1'
 
-      #TODO: uncomment when codeql is available
+      #TODO: maybe use this when codeql is available (after publishing)
       # - name: Upload Trivy scan results to GitHub Security tab
       #   uses: github/codeql-action/upload-sarif@v2
       #   with:
