--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,15 @@ jobs:
         name: Set up Go
         uses: actions/setup-go@v4
       -
+        name: Install library dependencies
+        run: |
+          sudo apt-get update --fix-missing
+          sudo apt-get install libfuse3-dev
+      -
+        name: Quick build check
+        run: |
+            go build .
+      -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
