--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,9 @@ jobs:
       -
         name: Install library dependencies
         run: |
+          sudo dpkg --add-architecture arm64
           sudo apt-get update --fix-missing
-          sudo apt-get install libfuse3-dev
+          sudo apt-get install libfuse3-dev gcc-aarch64-linux-gnu libfuse3-dev:arm64
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
