--- a/.github/workflows/code-coverage_windows.yml
+++ b/.github/workflows/code-coverage_windows.yml
@@ -35,7 +35,7 @@ jobs:
     timeout-minutes: 300
     steps:
     - name: checkout
-      uses: actions/checkout@v4.0.0
+      uses: actions/checkout@v4
 
     - name: Install Go
       uses: actions/setup-go@v4
@@ -51,11 +51,7 @@ jobs:
       run: |
         $ProgressPreference = 'SilentlyContinue'
         choco install -y winfsp zip
-        Write-Host "::set-env name=CPATH::C:\Program Files\WinFsp\inc\fuse;C:\Program Files (x86)\WinFsp\inc\fuse"
-        if ($env:GOARCH -eq "386") {
-        choco install -y mingw --forcex86 --force
-        Write-Host "::add-path::C:\\ProgramData\\chocolatey\\lib\\mingw\\tools\\install\\mingw32\\bin"
-        }
+        echo "CPATH=C:\Program Files\WinFsp\inc\fuse;C:\Program Files (x86)\WinFsp\inc\fuse" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         # Copy mingw32-make.exe to make.exe so the same command line
         # can be used on Windows as on macOS and Linux
         $path = (get-command mingw32-make.exe).Path
